--- a/lib/config/git/config
+++ b/lib/config/git/config
@@ -229,3 +229,6 @@
     end\n\
     File.open(%(%A), %(w)) {|f| f.write(b)}\n\
     exit 1 if b.include?(%(<)*%L)'"
+
+[include]
+  path = ~/.local/share/tinted-theming/tinty/tinted-delta-configs-file.gitconfig
