--- a/lib/config/tmux/tmux.conf
+++ b/lib/config/tmux/tmux.conf
@@ -3,6 +3,7 @@ set -g automatic-rename on
 set -g base-index 1
 set -g default-shell $SHELL
 set -ga terminal-overrides ",xterm*:Tc"
+set -g focus-events on
 set -g escape-time 0 # decrease command delay (increases vim responsiveness) # NOTE: removed -s
 set -g history-limit 100000
 set -g mode-keys vi
@@ -55,13 +56,15 @@ set -g @fzf-url-extra-filter 'grep -oE "zgenom load \b[\w\/]\b"'
 set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history
 # }}}
 
-set -g window-status-format "#[bg=#1c1c1c,fg=#383838]#[bg=#383838,fg=#1c1c1c]#I #W#[bg=#1c1c1c,fg=#383838]"
-set -g window-status-current-format "#[bg=#1c1c1c,fg=#383838]#[bg=#383838,fg=white]#I #W#[bg=#1c1c1c,fg=#383838]"
+set -g status-left ' '
+set -g status-bg black
+set -g status-fg white
+set -g window-status-format "#[bg=black,fg=color19]#[bg=color19,fg=black]#I #W#[bg=black,fg=color19]"
+set -g window-status-current-format "#[bg=black,fg=color16]#[bg=color16,fg=black]#I #W#[bg=black,fg=color16]"
 set -g window-status-activity-style reverse
-set -g status-right "#[fg=#0A400C,bg=#1c1c1c]#[fg=#B1AB86,bg=#0A400C]#{pomodoro_status} "
-set -ga status-right "#[fg=#819067,bg=#0A400C]#[fg=#0A400C,bg=#819067]%m%d󱛡%H%M "
-set -ga status-right "#[fg=#B1AB86,bg=#819067]#[fg=#0A400C,bg=#B1AB86]#(/Users/suweller/.dotfiles/bin/battery.sh -di) "
-
+set -g status-right "#[fg=color08,bg=black]#[fg=color09,bg=color08]#{pomodoro_status} "
+set -ga status-right "#[fg=color20,bg=color08]#[fg=color08,bg=color20]%m%d󱛡%H%M "
+set -ga status-right "#[fg=color21,bg=color20]#[fg=color08,bg=color21]#(/Users/suweller/.dotfiles/bin/battery.sh -di) "
 set -g @plugin 'tinted-theming/tinted-tmux' # {{{
 run-shell "tmux set-option -g @tinted-color $(tinty current)"
 # }}}
