--- a/lib/config/git/config
+++ b/lib/config/git/config
@@ -1,5 +1,6 @@
 [include]
   path = .gitconfig-local
+  path = ~/.local/share/tinted-theming/tinty/tinted-delta-configs-file.gitconfig
 
 [core]
   pager = delta
@@ -65,28 +66,6 @@
   branch-stat = !git diff --stat `git branch-base` HEAD^
   branch-l = !git l `git branch-base`...HEAD
   branch-lint = !rubocop-git --display-cop-names `git branch-base` HEAD
-  branch-ls-touched = "! ( \
-    git -c color.status=always status \
-    --short \
-    --untracked-files=all \
-    && \
-    git diff --name-only \
-    `git branch-base` \
-    | awk '{ print \"\\033[34mc_\\033[0m \"$0; }' \
-    ) \
-    "
-  branch-ls-files = "! ( \
-      git branch-ls-touched \
-        && \
-      git ls-files \
-        | awk '{ print \"\\033[90mo_\\033[0m \"$0; }' \
-    ) \
-    | awk '{ print NR-1 \"\t\" $0}' \
-    | uniq -f 2 \
-    | sort --key=3 --unique \
-    | sort --key=1 --numeric-sort --unique \
-    | sed -E \"s/^[0-9]*\t//\" \
-    "
   branch-summary = "! \
     if [ `git branch-merges-behind | wc -c` -eq 0 ]; then \
       echo \"No new merges on `git config branches.main`\"; \
