--- a/lib/config/tmux/tmux.conf
+++ b/lib/config/tmux/tmux.conf
@@ -58,26 +58,35 @@ set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history
 set -g status-left ' '
 set -g status-bg black
 set -g status-fg white
-set -g window-status-format "#[bg=black,fg=color19]#[bg=color19,fg=black]#I #W#[bg=black,fg=color19]"
-set -g window-status-current-format "#[bg=black,fg=color16]#[bg=color16,fg=black]#I #W#[bg=black,fg=color16]"
-set -g window-status-activity-style reverse
-set -g status-right "#[fg=color08,bg=black]#[fg=color09,bg=color08]#{pomodoro_status} "
-set -ga status-right "#[fg=color20,bg=color08]#[fg=color08,bg=color20]%m%d󱛡%H%M "
-set -ga status-right "#[fg=color21,bg=color20]#[fg=color08,bg=color21]#(/Users/suweller/.dotfiles/bin/battery.sh -di) "
+# set -g window-status-format "#[bg=black,fg=color19]#[bg=color19,fg=black]#I #W#[bg=black,fg=color19]"
+# set -g window-status-current-format "#[bg=black,fg=color16]#[bg=color16,fg=black]#I #W#[bg=black,fg=color16]"
+# set -g window-status-format "#[bg=color19,fg=black] #I #W "
+# set -g window-status-current-format "#[bg=color16,fg=black] #I #W "
+# set -g window-status-activity-style reverse
+
+# set -g status-right "#[fg=color08,bg=black]#[fg=color09,bg=color08]#{pomodoro_status} "
+# set -ga status-right "#[fg=color20,bg=color08]#[fg=color08,bg=color20]%m%d󱛡%H%M "
+# set -ga status-right "#[fg=color21,bg=color20]#[fg=color08,bg=color21]#(/Users/suweller/.dotfiles/bin/battery.sh -di) "
+set -g status-right "#[fg=color08,bg=black]#[fg=color09,bg=color08]"
+set -ga status-right " #{pomodoro_status} "
+set -ga status-right "#[fg=color20,bg=color08]#[fg=color08,bg=color20]"
+set -ga status-right " #(/Users/suweller/.dotfiles/datetime) "
+set -ga status-right "#[fg=color21,bg=color20]#[fg=color08,bg=color21]"
+set -ga status-right " #(/Users/suweller/.dotfiles/bin/battery -sb) "
 set -g @plugin 'tinted-theming/tinted-tmux' # {{{
 run-shell "tmux set-option -g @tinted-color $(tinty current)"
 # }}}
 
 set -g @plugin 'olimorris/tmux-pomodoro-plus' # {{{
 set -g @pomodoro_cancel 'T'
-set -g @pomodoro_complete "#[fg=$text_green]󰗇"
+set -g @pomodoro_complete "#[fg=color20]󰗇"
 set -g @pomodoro_granularity 'off'
 set -g @pomodoro_interval_display 'off'
 set -g @pomodoro_notifications 'on'
-set -g @pomodoro_on "#[fg=$text_red]󰐑"
-set -g @pomodoro_pause "#[fg=$color_yellow]󰐓"
-set -g @pomodoro_prompt_break "#[fg=$color_green]󰷲?"
-set -g @pomodoro_prompt_pomodoro "#[fg=$color_gray]󰷲?"
+set -g @pomodoro_on "#[fg=color10]󰐑"
+set -g @pomodoro_pause "#[fg=color11]󰐓"
+set -g @pomodoro_prompt_break "#[fg=color12]󰷲?"
+set -g @pomodoro_prompt_pomodoro "#[fg=color09]󰷲?"
 set -g @pomodoro_sound '/System/Library/Sounds/Purr.aiff'
 set -g @pomodoro_toggle 't'
 # }}}
