Move tinty switch to tmux keybinding
* FZF history is enough
* No need for zsh history

--- a/lib/config/tmux/tmux.conf
+++ b/lib/config/tmux/tmux.conf
@@ -14,6 +14,7 @@ set -g status on
 set -g status-position top
 set -g status-bg colour234
 set -g status-fg colour238
+set -g status-interval 1
 
 set-window -g pane-base-index 0
 set-window -g xterm-keys on # to make ctrl-arrow, etc. work
@@ -22,7 +23,6 @@ bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
-bind -r s run-shell "tmux setw -g status \$(tmux show -g -w status | grep -q off && echo on || echo off)"
 
 # Open new window with current path
 bind '"' split-window -c "#{pane_current_path}"
@@ -31,10 +31,9 @@ bind c new-window -c "#{pane_current_path}"
 bind -r Left swap-window -t -1
 bind -r Right swap-window -t +1
 
-bind -r g run -b '~/.dotfiles/bin/tmux-open-app || exit 0'
-# bind X if-shell -F '#{?pane_input_off,1,0}'
-#     "select-pane -e \; select-pane -T '#{@original_pane_title}'" \
-#     "run-shell \"tmux set-option -p @original_pane_title \\\"\\\$(tmux display-message -p -F '#{pane_title}')\\\"\" \; select-pane -d \; select-pane -T '#{pane_title} [LOCKED]'"
+bind -r b run "tmux setw -g status \$(tmux show -g -w status | grep -q off && echo on || echo off)"
+bind -r g run "~/.dotfiles/bin/tmux-open-app.sh || exit 0"
+bind -r s run -b "~/.dotfiles/bin/tmux-tinty-apply.sh"
 
 # fix ssh agent when tmux is detached
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
