--- a/lib/config/tmux/tmux.conf
+++ b/lib/config/tmux/tmux.conf
@@ -69,9 +69,9 @@ set -g status-fg white
 set -g status-right "#[fg=color08,bg=black]#[fg=color10,bg=color08]"
 set -ga status-right " #{pomodoro_status} "
 set -ga status-right "#[fg=color20,bg=color08]#[fg=color10,bg=color20]"
-set -ga status-right " #(/Users/suweller/.dotfiles/bin/datetime -mk -dk -wk -wa -hk -q) "
+set -ga status-right '#(/Users/suweller/.dotfiles/bin/strftime_with_symbols "%m%d %%as%%HI %%HQ") '
 set -ga status-right "#[fg=color21,bg=color20]#[fg=color10,bg=color21]"
-set -ga status-right " #(/Users/suweller/.dotfiles/bin/battery -sb) "
+set -ga status-right "#(/Users/suweller/.dotfiles/bin/battery -fi)  "
 set -g @plugin 'tinted-theming/tinted-tmux' # {{{
 run-shell "tmux set-option -g @tinted-color $(tinty current)"
 # }}}
