--- a/lib/config/tmux/tmux.conf
+++ b/lib/config/tmux/tmux.conf
@@ -10,14 +10,29 @@ set -g monitor-activity on
 set -g mouse
 set -g renumber-windows on
 set -g set-titles off
-set -g status on
-set -g status-position top
-set -g status-bg colour234
-set -g status-fg colour238
-set -g status-interval 1
 
 set-window -g pane-base-index 0
 set-window -g xterm-keys on # to make ctrl-arrow, etc. work
+
+set -g status on
+set -g status-bg black
+set -g status-fg white
+set -g status-interval 1
+set -g status-position top
+
+set -g status-left ' '
+set -g window-status-format "#[bg=color08,fg=black]#I·#W#{?window_flags,#{window_flags}, }"
+set -g window-status-current-format "#[bg=color16,fg=black]#I·#W#{?window_flags,#{window_flags}, }"
+
+# 
+set -g status-right-length 90
+set -g status-right "#(pane_current_path_clipped) "
+set -ga status-right "#(tmux_git_status)"
+set -ga status-right "#{pomodoro_status} "
+set -ga status-right "#[fg=color20,bg=color08]#[fg=color0,bg=color20] "
+set -ga status-right '#(strftime_with_symbols "%m%d%%as%H%%HQ") '
+set -ga status-right "#[fg=color21,bg=color20]#[fg=color0,bg=color21] "
+set -ga status-right "#(battery -fi) "
 
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
@@ -51,51 +66,32 @@ set -g @plugin 'wfxr/tmux-fzf-url' # {{{
 set -g @fzf-url-extra-filter 'grep -oE "zgenom load \b[\w\/]\b"'
 # }}}
 
-set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history
+set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history -
 # }}}
 
-set -g status-left ' '
-set -g status-bg black
-set -g status-fg white
-# set -g window-status-format "#[bg=black,fg=color19]#[bg=color19,fg=black]#I #W#[bg=black,fg=color19]"
-# set -g window-status-current-format "#[bg=black,fg=color16]#[bg=color16,fg=black]#I #W#[bg=black,fg=color16]"
-# set -g window-status-format "#[bg=color19,fg=black] #I #W "
-# set -g window-status-current-format "#[bg=color16,fg=black] #I #W "
-# set -g window-status-activity-style reverse
-
-# set -g status-right "#[fg=color08,bg=black]#[fg=color09,bg=color08]#{pomodoro_status} "
-# set -ga status-right "#[fg=color20,bg=color08]#[fg=color08,bg=color20]%m%d󱛡%H%M "
-# set -ga status-right "#[fg=color21,bg=color20]#[fg=color08,bg=color21]#(/Users/suweller/.dotfiles/bin/battery.sh -di) "
-set -g status-right "#[fg=color08,bg=black]#[fg=color10,bg=color08]"
-set -ga status-right " #{pomodoro_status} "
-set -ga status-right "#[fg=color20,bg=color08]#[fg=color10,bg=color20]"
-set -ga status-right '#(/Users/suweller/.dotfiles/bin/strftime_with_symbols "%m%d %%as%%HI %%HQ") '
-set -ga status-right "#[fg=color21,bg=color20]#[fg=color10,bg=color21]"
-set -ga status-right "#(/Users/suweller/.dotfiles/bin/battery -fi)  "
 set -g @plugin 'tinted-theming/tinted-tmux' # {{{
 run-shell "tmux set-option -g @tinted-color $(tinty current)"
 # }}}
 
 set -g @plugin 'olimorris/tmux-pomodoro-plus' # {{{
 set -g @pomodoro_cancel 'T'
-set -g @pomodoro_complete "#[fg=color20]󰗇"
 set -g @pomodoro_granularity 'off'
 set -g @pomodoro_interval_display 'off'
 set -g @pomodoro_notifications 'on'
-set -g @pomodoro_on "#[fg=color10]󰐑"
-set -g @pomodoro_pause "#[fg=color11]󰐓"
-set -g @pomodoro_prompt_break "#[fg=color12]󰷲?"
-set -g @pomodoro_prompt_pomodoro "#[fg=color09]󰷲?"
 set -g @pomodoro_sound '/System/Library/Sounds/Purr.aiff'
 set -g @pomodoro_toggle 't'
+set -g @pomodoro_complete "#[fg=color08,bg=black]#[fg=color0,bg=color08] 󰗇"
+set -g @pomodoro_on "#[fg=color08,bg=black]#[fg=color0,bg=color08] 󰐑"
+set -g @pomodoro_pause "#[fg=color08,bg=black]#[fg=color0,bg=color08] 󰐓"
+set -g @pomodoro_prompt_break "#[fg=color08,bg=black]#[fg=color0,bg=color08] 󰷲?"
+set -g @pomodoro_prompt_pomodoro "#[fg=color08,bg=black]#[fg=color0,bg=color08] 󰷲?"
 # }}}
 
-set -g @plugin 'tmux-plugins/tpm' # {{{
+set -g @plugin 'tmux-plugins/tpm' # {{{ NOTE: Keep me at the bottom -
 # Prefix I - Install plugins & Refresh TMUX env
 # Prefix U - Update plugins & Refresh TMUX env
 # Prefix alt u - Remove/Uninstall plugins not in the list above
-# }}}
-
 if "test ! -d $XDG_CONFIG_HOME/tmux/plugins/tpm" \
   "run 'git clone https://github.com/tmux-plugins/tpm $XDG_CONFIG_HOME/tmux/plugins/tpm'"
 run "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
+# }}}
