--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,24 @@ lib/rbenv/
 lib/rbenv/**
 lib/vim/
 lib/vim/**
+
+lib/config/.jira/
+lib/config/btop/
+lib/config/bundle
+lib/config/fontforge/FontsOpenAtLastQuit
+lib/config/fontforge/prefs
+lib/config/glow/
+lib/config/gtk-2.0/
+lib/config/http-prompt/
+lib/config/irb/irbrc_history
+lib/config/k9s/
+lib/config/kitty/
+lib/config/lazygit/
+lib/config/nushell/
+lib/config/tmux/plugins/
+lib/config/vim/autoload/
+lib/config/vim/colors/
+lib/config/vim/config/
+lib/config/vim/fzf/
+lib/config/weechat/
+lib/config/zellij/
