--- a/lib/config/tmux/tmux.conf
+++ b/lib/config/tmux/tmux.conf
@@ -1,7 +1,8 @@
 # vim:fdm=marker
 set -g automatic-rename on
 set -g default-shell $SHELL
-set -ga terminal-overrides ",xterm*:Tc"
+# set -ga terminal-overrides ",xterm*:Tc"
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g focus-events on
 set -g escape-time 0 # decrease command delay (increases vim responsiveness) # NOTE: removed -s
 set -g history-limit 100000
@@ -15,24 +16,28 @@ set-window -g pane-base-index 0
 set-window -g xterm-keys on # to make ctrl-arrow, etc. work
 
 set -g status on
-set -g status-bg black
+set -g status-bg default
 set -g status-fg white
 set -g status-interval 1
 set -g status-position top
 
 set -g status-left ' '
-set -g window-status-format "#[bg=color08,fg=black]#I·#W#{?window_flags,#{window_flags}, }"
-set -g window-status-current-format "#[bg=color16,fg=black]#I·#W#{?window_flags,#{window_flags}, }"
+# set -g window-status-format "#[bg=,fg=black]#I·#W#{?window_flags,#{window_flags}, }"
+# set -g window-status-current-format "#[bg=color08,fg=white]#I·#W#{?window_flags,#{window_flags}, }"
+set -g window-status-separator ''
+set -g window-status-style 'fg=black bg=colour236'
+# #{?window_active,󰓾,}
+set -g window-status-current-format '#{?window_bell_flag,#[bg=],}#I#W#{?window_flags,,}#{?window_marked_flag,󰃃,}#{?window_activity_flag,,}#{?window_bell_flag,,}#{?window_silence_flag,󰝟,}#{?window_zoomed_flag,󰨤,}#[fg=default]'
+set -g window-status-format '#{?window_bell_flag,#[bg=],}#I#W#{?window_flags,,}#{?window_marked_flag,󰃃,}#{?window_activity_flag,,}#{?window_bell_flag,,}#{?window_silence_flag,󰝟,}#{?window_zoomed_flag,󰨤,}#[fg=default]'
 
 # 
 set -g status-right-length 90
 set -g status-right "#(pane_current_path_clipped) "
-set -ga status-right "#(tmux_git_status)"
 set -ga status-right "#{pomodoro_status} "
 set -ga status-right "#[fg=color20,bg=color08]#[fg=color0,bg=color20] "
-set -ga status-right '#(strftime_with_symbols "%m%d%%as%H%%HQ") '
+set -ga status-right "#(strftime_with_symbols "%m%d%%ms%%as%H%%HQ%M") "
 set -ga status-right "#[fg=color21,bg=color20]#[fg=color0,bg=color21] "
-set -ga status-right "#(battery -fi) "
+set -ga status-right "#(battery -i) "
 
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
@@ -52,6 +57,7 @@ bind -r s run -b "~/.dotfiles/bin/tmux-tinty-apply.sh"
 
 # fix ssh agent when tmux is detached
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+setenv -g TINTED_TMUX_OPTION_ACTIVE 1
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
@@ -70,6 +76,8 @@ set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history -
 # }}}
 
 set -g @plugin 'tinted-theming/tinted-tmux' # {{{
+set -g @tint_window_style 'bg=rgba(0,0,0,0.7)'  # 70% opaque black
+set -g @tint_status_style 'bg=rgba(0,0,0,0.7)'  # 70% opaque black
 run-shell "tmux set-option -g @tinted-color $(tinty current)"
 # }}}
 
@@ -91,6 +99,7 @@ set -g @plugin 'tmux-plugins/tpm' # {{{ NOTE: Keep me at the bottom -
 # Prefix I - Install plugins & Refresh TMUX env
 # Prefix U - Update plugins & Refresh TMUX env
 # Prefix alt u - Remove/Uninstall plugins not in the list above
+# TODO: move to State
 if "test ! -d $XDG_CONFIG_HOME/tmux/plugins/tpm" \
   "run 'git clone https://github.com/tmux-plugins/tpm $XDG_CONFIG_HOME/tmux/plugins/tpm'"
 run "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
